updated index.html, main.css and README.md

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi&family=Roboto&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <a href="https://www.youtube.com/watch?v=_zNoSdIk_0I" target="_blank">
   <article class="card">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/%C3%96l%C3%BCdeniz_on_the_Turquoise_Coast%2C_Turkey.jpg" width="300px" height="200px" alt="Test">
-    <h3>Travel to Turkey</h3>
-    <p>Turkey is <em>beautiful</em> country with many natural attraction spots that you can enjoy to fullest.</p>
-  </a>
-</article>
+    <a href="https://www.youtube.com/watch?v=_zNoSdIk_0I" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/%C3%96l%C3%BCdeniz_on_the_Turquoise_Coast%2C_Turkey.jpg" 
+        width="300px" height="220px" alt="Ölüdeniz Beach in Fethiye">
+        <h3>Travel to Turkey</h3>
+        <p>Turkey is <em>beautiful</em> country with many natural attraction spots that you can enjoy to fullest.</p>
+    </a>
+  </article>
 </body>
 </html>
